# python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/TODO-my-package/: main.py
